--- a/app/styles/grid.css
+++ b/app/styles/grid.css
@@ -2,10 +2,11 @@
   width: 100%;
   height: 100%;
   display: grid;
+  /*margin: 10px;*/
 }
 
 .grid > .grid-element {
-  border-radius: 5%;
+  border-radius: 10px;
   overflow: hidden;
 }
 
